# STM32_Project_Template

./: .clangd  Project+Target_1.cbuild.yml  Project+Target_1.cprj  Project.cproject.yaml  Project.csolution.yaml  Project.uvguix.jeremy  Project.uvoptx  Project.uvprojx  README.md
Listings/: Project.map  startup_stm32f10x_md.lst
Objects/: Project.axf  Project.build_log.htm  Project.htm  Project.lnp  Project_Target 1.dep  delay.d  main.d  misc.d  stm32f10x_adc.d  stm32f10x_bkp.d  stm32f10x_can.d  stm32f10x_cec.d  stm32f10x_crc.d  stm32f10x_dac.d  stm32f10x_dbgmcu.d  stm32f10x_dma.d  stm32f10x_exti.d  stm32f10x_flash.d  stm32f10x_fsmc.d  stm32f10x_gpio.d  stm32f10x_i2c.d  stm32f10x_it.d  stm32f10x_iwdg.d  stm32f10x_pwr.d  stm32f10x_rcc.d  stm32f10x_rtc.d  stm32f10x_sdio.d  stm32f10x_spi.d  stm32f10x_tim.d  stm32f10x_usart.d  stm32f10x_wwdg.d  system_stm32f10x.d
tmp/Project/Target_1/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
